#0008 Deleting Old endpoints

--- a/cofig-server/src/main/resources/configurations/apigateway.yml
+++ b/cofig-server/src/main/resources/configurations/apigateway.yml
@@ -2,17 +2,18 @@ server:
   port: 8222
 
 spring:
+  name: apigateway
   cloud:
     gateway:
       discovery:
         locator:
           enabled: true
       routes:
-        - id: subjects
+        - id: subjectsms
           uri: http://localhost:8090
           predicates:
             - Path=/api/**
-        - id: users
+        - id: usermicroservice
           uri: http://localhost:8989
           predicates:
             - Path=/users/**
