--- a/cofig-server/src/main/resources/configurations/subjectsms.yml
+++ b/cofig-server/src/main/resources/configurations/subjectsms.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://asub:{password}@cluster0.gjveou6.mongodb.net
+      uri: "your url to the database"
       database: Predmety
   application:
     name: subjectsms
@@ -12,6 +12,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
 
 server:
   port: 8090
