--- a/cofig-server/src/main/resources/configurations/usermicroservice.yml
+++ b/cofig-server/src/main/resources/configurations/usermicroservice.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://mpr:{password}@cluster0.gjveou6.mongodb.net/
+      uri: "your url to database"
       database: pouzivatel
 
 eureka:
@@ -10,5 +10,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+
 server:
   port: 8989
