--- a/cofig-server/src/main/resources/configurations/subjectsms.yml
+++ b/cofig-server/src/main/resources/configurations/subjectsms.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://mpr:STYIVOme8e4I20pM@cluster0.gjveou6.mongodb.net/
+      uri: mongodb+srv://asub:GhVPhyEQgQtO5LzE@cluster0.gjveou6.mongodb.net
       database: Predmety
   application:
     name: subjectsms
