--- a/identityService/src/main/resources/application.yml
+++ b/identityService/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 spring:
+  application:
+    name: identityservice
+
+#  config:
+#    import: optional:configserver:http://localhost:8888
+
+
   data:
     mongodb:
       uri: mongodb+srv://asub:GhVPhyEQgQtO5LzE@cluster0.gjveou6.mongodb.net
       database: pouzivatel
-
 eureka:
   instance:
     hostname: localhost
@@ -11,10 +17,11 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
-management:
-  tracing:
-    sampling:
-      probability: 1.0
+#management:
+#  tracing:
+#    sampling:
+#      probability: 1.0
+
 
 server:
-  port: 8989
+  port: 8889
