--- a/cofig-server/src/main/resources/configurations/apigateway.yml
+++ b/cofig-server/src/main/resources/configurations/apigateway.yml
@@ -13,13 +13,26 @@ spring:
           uri: http://localhost:8090
           predicates:
             - Path=/api/**
+          filters:
+            - AuthenticationFilter
         - id: usermicroservice
           uri: http://localhost:8989
           predicates:
             - Path=/users/**
+        - id: identityservice
+          uri: http://localhost:6666
+          predicates:
+            - Path=/auth/**
+          filters:
+            - AuthenticationFilter
+#eureka:
+#  client:
+#    register-with-eureka: true
 eureka:
   client:
-    register-with-eureka: false
+    service-url:
+      defaultZone : http://localhost:8761/eureka/
+
 management:
   tracing:
     sampling:
