--- a/cofig-server/src/main/resources/configurations/apigateway.yml
+++ b/cofig-server/src/main/resources/configurations/apigateway.yml
@@ -8,6 +8,16 @@ spring:
       discovery:
         locator:
           enabled: true
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:4200"
+            allowedHeaders: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - PATCH
+              - DELETE
       routes:
         - id: subjectsms
           uri: http://localhost:8090
@@ -20,7 +30,7 @@ spring:
           predicates:
             - Path=/users/**
         - id: identityservice
-          uri: http://localhost:6666
+          uri: http://localhost:8889
           predicates:
             - Path=/auth/**
           filters:
