--- a/cofig-server/src/main/resources/configurations/apigateway.yml
+++ b/cofig-server/src/main/resources/configurations/apigateway.yml
@@ -18,6 +18,7 @@ spring:
               - POST
               - PATCH
               - DELETE
+              - PUT
       routes:
         - id: subjectsms
           uri: http://localhost:8090
@@ -29,6 +30,8 @@ spring:
           uri: http://localhost:8989
           predicates:
             - Path=/users/**
+          filters:
+            - AuthenticationFilter
         - id: identityservice
           uri: http://localhost:8889
           predicates:
