be part of avatar

--- a/cofig-server/src/main/resources/configurations/apigateway.yml
+++ b/cofig-server/src/main/resources/configurations/apigateway.yml
@@ -30,8 +30,8 @@ spring:
           uri: http://localhost:8989
           predicates:
             - Path=/users/**
-          filters:
-            - AuthenticationFilter
+#          filters:
+#            - AuthenticationFilter
         - id: identityservice
           uri: http://localhost:8889
           predicates:
