--- a/cofig-server/src/main/resources/configurations/usermicroservice.yml
+++ b/cofig-server/src/main/resources/configurations/usermicroservice.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://asub:GhVPhyEQgQtO5LzE@cluster0.gjveou6.mongodb.net
+      uri: "Mongo connection String"
       database: pouzivatel
 
 eureka:
