Added DemoDatabase for deploy

--- a/cofig-server/src/main/resources/configurations/subjectsms.yml
+++ b/cofig-server/src/main/resources/configurations/subjectsms.yml
@@ -1,7 +1,8 @@
 spring:
   data:
     mongodb:
-      uri: "Mongo connection String"
+#      safe connection to demo database
+      uri: mongodb+srv://mykyprykhodko:QByVvtSvWepPDwHf@umbeasylearn.syb9ryg.mongodb.net/
       database: Predmety
   application:
     name: subjectsms
