--- a/identityService/src/main/resources/application.yml
+++ b/identityService/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb+srv://asub:GhVPhyEQgQtO5LzE@cluster0.gjveou6.mongodb.net
+      uri: mongodb+srv://mykyprykhodko:QByVvtSvWepPDwHf@umbeasylearn.syb9ryg.mongodb.net/
       database: pouzivatel
 eureka:
   instance:
