--- a/cofig-server/src/main/resources/configurations/usermicroservice.yml
+++ b/cofig-server/src/main/resources/configurations/usermicroservice.yml
@@ -7,10 +7,10 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: discovery-mcs
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery:8761/eureka
 
 management:
   tracing:
