Docker-compose changes

--- a/identityService/Dockerfile
+++ b/identityService/Dockerfile
@@ -2,7 +2,7 @@ FROM docker.io/eclipse-temurin:21
 
 WORKDIR /app
 
-COPY ../identityService/target/identityservice-0.0.1-SNAPSHOT.jar /app/identityservice-0.0.1-SNAPSHOT.jar
+COPY target/identityservice-0.0.1-SNAPSHOT.jar /app/identityservice-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8889/tcp
 
