--- a/subjectsms/Dockerfile
+++ b/subjectsms/Dockerfile
@@ -2,7 +2,7 @@ FROM docker.io/eclipse-temurin:21
 
 WORKDIR /app
 
-COPY ../subjectsms/target/subjectsms-0.0.1-SNAPSHOT.jar /app/subjectsms-0.0.1-SNAPSHOT.jar
+COPY target/subjectsms-0.0.1-SNAPSHOT.jar /app/subjectsms-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8090/tcp
 
