--- a/apigateway/Dockerfile
+++ b/apigateway/Dockerfile
@@ -2,7 +2,7 @@ FROM docker.io/eclipse-temurin:21
 
 WORKDIR /app
 
-COPY ../apigateway/target/apigateway-0.0.1-SNAPSHOT.jar /app/apigateway-0.0.1-SNAPSHOT.jar
+COPY target/apigateway-0.0.1-SNAPSHOT.jar /app/apigateway-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8222/tcp
 
