--- a/cofig-server/Dockerfile
+++ b/cofig-server/Dockerfile
@@ -2,7 +2,7 @@ FROM docker.io/eclipse-temurin:21
 
 WORKDIR /app
 
-COPY ../cofig-server/target/cofig-server-0.0.1-SNAPSHOT.jar /app/cofig-server-0.0.1-SNAPSHOT.jar
+COPY target/cofig-server-0.0.1-SNAPSHOT.jar /app/cofig-server-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8888/tcp
 
