--- a/discovery/Dockerfile
+++ b/discovery/Dockerfile
@@ -2,7 +2,7 @@ FROM docker.io/eclipse-temurin:21
 
 WORKDIR /app
 
-COPY ../discovery/target/discovery-0.0.1-SNAPSHOT.jar /app/discovery-0.0.1-SNAPSHOT.jar
+COPY target/discovery-0.0.1-SNAPSHOT.jar /app/discovery-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8761/tcp
 
